Restructured & cleaned up for ISCAS

--- a/experiments/noise.ipynb
+++ b/experiments/noise.ipynb
@@ -4,17 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Inputs (either/or):\n",
-    "    - Binary vectors (Bernoulli)\n",
-    "    - bipolar vectors (Rademacher)\n",
-    "    - real values vectors (Gaussian)\n",
-    "- Objectives (either/or):\n",
-    "    - classify perfect match vs every other vector under varying SNR\n",
-    "    - maximize information gain\n",
-    "- Thresholds (either/or):\n",
-    "    - uniformly spaced\n",
-    "    - symmetric but non-uniformly spaced\n",
-    "    - arbitrarily spaced"
+    "# Optimial parameterization vs noise\n"
    ]
   },
   {
